# tao

-scripts/0-extract_QT/: channel_qt_plots.py  extract_charge_calib.py  extract_qt_2d.py  launch_extract_charge_calib.sh  plot_qt_cut_optimization.py  veto_params.py
-scripts/1-gain_calibration/: compare_runs_gain.py  gain_calibration.py  gain_calibration_experimental.py  gain_calibration_plots.py  gain_calibration_stable.py  gain_fit_models.py  gain_vs_time.py  launch_compare_runs.sh  launch_gain_calibration.sh
-scripts/2-PE_spectra/: fit_peaks_cs137.py  fit_peaks_ge68.py  get_spectrum.py  get_spectrum_ADC_cut.py  launch_compare_ge68_ov_scan.sh  launch_compare_ge68_specific.sh  launch_get_spectrum.sh  merge_spectrum.py  spectrum_utils.py
-scripts/3-non-uniformity/: acu_plots.py  acu_scan_compare.py  channel_qt_plots.sh  cls_plots.py  cls_scan_compare.py  extract_charge_calib.py  launch_nu_pipeline.sh  ly_extractor.py  main.py  scan_config.py  tao_nu_pipeline.py
-scripts/old_tools/: calculate_dark_noise_official.py  check_root_stats.py  explore_root.py  extract_sipm_calib.py  launch_extract_charge_calib_old.sh  launch_extract_sipm_calib.sh  launch_gain_calibration.sh  launch_generate_charge.sh  launch_plot_energy_resolution.sh  launch_plot_energy_resolution.sub  launch_plot_resolution_vs_run.sh  launch_plot_resolution_vs_run.sub  launch_plot_tdc.sh  plot_energy_resolution.py  plot_tdc_from_rtraw.py  reorganize_energy_resolution.sh
3-non-uniformity/: data_loader.py  nonuniformity_map.py  nu_map.py  plot_bias_comparison.py
Calibration/: CMakeLists.txt
Calibration/CalibAlg/: CMakeLists.txt
Calibration/CalibAna/: CMakeLists.txt
Detector/TAOGeometry/: CMakeLists.txt
Detector/TAOIDService/: CMakeLists.txt
RecChargeCenterAlg/: CMakeLists.txt  README.md
RecChargeCenterAlg/include/: CCRec.hh  ChargeCenterUtils.hh
RecChargeCenterAlg/script/: 900R.txt  900R_AddPosition.txt  ALLBad_channels_20260112_1039_dy.txt  Good_channels_20251206.txt  add_position_v2.txt  channel_position_v2.txt  curve_params_StaticBaseline.csv  healpix16_pixel_centers.txt  healpix4_pixel_centers.txt  openEffsample_beyond900Points.root  pri_chid_dcr.csv
RecChargeCenterAlg/share/: run.py
RecChargeCenterAlg/src/: CCRec_T25.7.1.cc  ChargeCenterUtils.cc
RecQMLEAlg/input/: Ge68_charge_template.root
orsa_classification/orsa_classification-gromov/: CMakeLists.txt  README.md  build.sh  submit_jobs.py  submit_jobs_universal.py
orsa_classification/orsa_classification-gromov/config/: config_juno.json  config_tao.json
orsa_classification/orsa_classification-gromov/include/: Candidate.h  HistoryManager.h  MuonManager.h  OrsaAlg.h  Selector.h  TimeWindowPickerRule.h
orsa_classification/orsa_classification-gromov/python/: demo_analysis.py
orsa_classification/orsa_classification-gromov/share/: run.py
orsa_classification/orsa_classification-gromov/src/: CorrelationEngine.cc  OrsaAlg.cc  OutputManager.cc
taosw_T25-7-1/Reconstruction/RecProbeTweedieAlg/tao_cvt/: CMakeLists.txt  convert.cpp  convert.hpp  elec_event.cpp  main.cpp  sim_event.cpp
(+359 files in other folders)
